--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "Ezra-mvvm"
+rootProject.name = "Onchari-mvvm"
 include ':app'
